RESOLVED FIXED270283
Null pointer dereference in WebCore::ImageDocument::createDocumentStructure
https://bugs.webkit.org/show_bug.cgi?id=270283
Summary Null pointer dereference in WebCore::ImageDocument::createDocumentStructure
Erica Li
Reported 2024-02-28 22:21:56 PST
Attachments
Erica Li
Comment 1 2024-02-29 22:08:09 PST
Note You need to log in before you can comment on or make changes to this bug.