Null pointer dereference in WebCore::ImageDocument::createDocumentStructure. https://bugs.webkit.org/show_bug.cgi?id=270283. rdar://122779661.

Reviewed by Chris Dumez.

Adding null check to prevent the cases where local frame would be detached during createDocumentStructure.

* LayoutTests/fast/images/imageDocument-appendBytes-crash-expected.txt: Added.
* LayoutTests/fast/images/imageDocument-appendBytes-crash.html: Added.
* Source/WebCore/html/ImageDocument.cpp:
(WebCore::ImageDocument::updateDuringParsing):
(WebCore::ImageDocument::createDocumentStructure):

Canonical link: https://commits.webkit.org/275537@main