Source/WebCore/html/ImageDocument.cpp
@@ -147,6 +147,9 @@ void ImageDocument::updateDuringParsing()
     if (!m_imageElement)
         createDocumentStructure();
 
+    if (!frame())
+        return;
+
     if (RefPtr<FragmentedSharedBuffer> buffer = loader()->mainResourceData()) {
         if (auto* cachedImage = m_imageElement->cachedImage())
             cachedImage->updateBuffer(*buffer);
@@ -236,9 +239,10 @@ void ImageDocument::createDocumentStructure()
     auto head = HTMLHeadElement::create(*this);
     rootElement->appendChild(head);
 
+    RefPtr documentLoader = loader();
     auto body = HTMLBodyElement::create(*this);
     body->setAttribute(styleAttr, "margin: 0px; height: 100%"_s);
-    if (MIMETypeRegistry::isPDFMIMEType(document().loader()->responseMIMEType()))
+    if (documentLoader && MIMETypeRegistry::isPDFMIMEType(documentLoader->responseMIMEType()))
         body->setInlineStyleProperty(CSSPropertyBackgroundColor, "white"_s);
     rootElement->appendChild(body);
     
@@ -249,8 +253,8 @@ void ImageDocument::createDocumentStructure()
         imageElement->setAttribute(styleAttr, "-webkit-user-select:none; display:block; padding:env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);"_s);
     imageElement->setLoadManually(true);
     imageElement->setSrc(AtomString { url().string() });
-    if (auto* cachedImage = imageElement->cachedImage())
-        cachedImage->setResponse(loader()->response());
+    if (auto* cachedImage = imageElement->cachedImage(); documentLoader && cachedImage)
+        cachedImage->setResponse(documentLoader->response());
     body->appendChild(imageElement);
     imageElement->setLoadManually(false);
     
